JS now on index.html to put date in the jumbotron. Additionally, the text area background will change color dynamically based on time of day.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <header class="jumbotron">
     <h1 class="display-3">Work Day Scheduler</h1>
     <p class="lead">A simple calendar app for scheduling your work day</p>
-    <p id="currentDay" class="lead">TODAY'S DATE HERE VIA JS</p>
+    <p id="currentDay" class="lead"></p>
   </header>
   <div class="container">
     <!-- Timeblocks go here -->
@@ -27,7 +27,7 @@
         9AM
       </div>
       <div class="col-md-8 description">
-        <textarea id="9AM" name="9AM"></textarea>
+        <textarea data-time="09" id="9AM" name="9AM" class="thisHourInput"></textarea>
       </div>
       <div class="col-md-1 saveBtn">
         <button class="btn btn-primary" type="submit">Save</button>
@@ -38,7 +38,7 @@
         10AM
       </div>
       <div class="col-md-8">
-        <textarea id="10AM" name="10AM"></textarea>
+        <textarea data-time="10" id="10AM" name="10AM" class="thisHourInput"></textarea>
       </div>
       <div class="col-md-1 saveBtn">
         <button class="btn btn-primary" type="submit">Save</button>
@@ -49,7 +49,7 @@
         11AM
       </div>
       <div class="col-md-8">
-        <textarea id="11AM" name="11AM"></textarea>
+        <textarea data-time="11" id="11AM" name="11AM" class="thisHourInput"></textarea>
       </div>
       <div class="col-md-1 saveBtn">
         <button class="btn btn-primary" type="submit">Save</button>
@@ -60,7 +60,7 @@
         12PM
       </div>
       <div class="col-md-8">
-        <textarea id="12PM" name="12PM"></textarea>
+        <textarea data-time="12" id="12PM" name="12PM" class="thisHourInput"></textarea>
       </div>
       <div class="col-md-1 saveBtn">
         <button class="btn btn-primary" type="submit">Save</button>
@@ -71,7 +71,7 @@
         1PM
       </div>
       <div class="col-md-8">
-        <textarea id="1PM" name="1PM"></textarea>
+        <textarea data-time="13" id="1PM" name="1PM" class="thisHourInput"></textarea>
       </div>
       <div class="col-md-1 saveBtn">
         <button class="btn btn-primary" type="submit">Save</button>
@@ -82,7 +82,7 @@
         2PM
       </div>
       <div class="col-md-8">
-        <textarea id="2PM" name="2PM"></textarea>
+        <textarea data-time="14" id="2PM" name="2PM" class="thisHourInput"></textarea>
       </div>
       <div class="col-md-1 saveBtn">
         <button class="btn btn-primary" type="submit">Save</button>
@@ -93,7 +93,7 @@
         3PM
       </div>
       <div class="col-md-8">
-        <textarea id="3PM" name="3PM"></textarea>
+        <textarea data-time="15" id="3PM" name="3PM" class="thisHourInput"></textarea>
       </div>
       <div class="col-md-1 saveBtn">
         <button class="btn btn-primary" type="submit">Save</button>
@@ -104,7 +104,7 @@
         4PM
       </div>
       <div class="col-md-8">
-        <textarea id="4PM" name="4PM"></textarea>
+        <textarea data-time="16" id="4PM" name="4PM" class="thisHourInput"></textarea>
       </div>
       <div class="col-md-1 saveBtn">
         <button class="btn btn-primary" type="submit">Save</button>
@@ -115,7 +115,7 @@
         5PM
       </div>
       <div class="col-md-8">
-        <textarea id="5PM" name="5PM"></textarea>
+        <textarea data-time="17" id="5PM" name="5PM" class="thisHourInput"></textarea>
       </div>
       <div class="col-md-1 saveBtn">
         <button class="btn btn-primary" type="submit">Save</button>
@@ -125,6 +125,111 @@
 
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+  <script>
+    //This sets the current date at the top of the page
+    var currentDateTime = moment().format("dddd, MMMM Do YYYY, h:mm a");
+    // console.log(currentDateTime)
+    $('#currentDay').append(currentDateTime)
+    var currentHourNumber;
+    var currentHour = moment().hour()
+    console.log(currentHour)
+
+    // Clicking on the save button will store the time and user input in `localStorage`.Clicking a timeblock's "Save" button stores the input text in local storage, allowing the text to persist when the application is refreshed.
+
+    //This grabs a class from each textarea and then compares the data-time attribute with the current hour. The if statements determine which color the background-color should be
+    $.each($('.thisHourInput'), function (index, value) {
+      var scheduleHour = ($(this).attr('data-time'));
+      var currentHour = moment().hour()
+      console.log(currentHour)
+      console.log($(this).attr('data-time'));
+      if (currentHour > scheduleHour) {
+        $(this).css('background-color', 'pink')
+      } else if (currentHour == scheduleHour) {
+        $(this).css('background-color', 'red')
+      } else {
+        $(this).css('background-color', 'light-yellow')
+      }
+    });
+
+
+
+
+// Most the the following is different things I was trying to get the color formatting to work and exploring moment.js in general
+
+    // var currentTime = moment().startOf('hour').fromNow();
+    // console.log(currentTime)
+
+    // var timeArray = moment().toArray();
+    // console.log(timeArray)
+    // console.log(timeArray[3])
+    // console.log(timeArray[3] - $('#9AM').attr('date-time'))
+    // console.log(moment().format('hh a'))
+
+    // $("textarea").each(function () {
+    //   var currentHourNumber =
+    //     console.log(currentHourNumber)
+    // });
+    // var currentHour = moment().hour()
+    // console.log(currentHour)
+    // var referenceHour = $('.thisHourInput').attr('data-time')
+    // console.log(referenceHour)
+
+    // var subtractingTime = moment().subtract(9, 'hours').format('hh a');
+    // console.log(subtractingTime)
+
+    // if (currentHour > referenceHour) {
+    //   console.log('yes mutha fucka')
+    //   $('#9AM').css('background-color', 'red')
+    // } else if (currentHour === referenceHour) {
+    //   $('#9AM').css('background-color', 'white')
+    // } else {
+    //   $('#9AM').css('background-color', 'blue')
+    // }
+
+    // var hourBlocksIdArray = ['#9AM', '#10AM', '#11AM', '#12PM', '#1PM', '#2PM', '#3PM', '#4PM', '#5PM',]
+
+    // for (var i = 0; i < hourBlocksIdArray.length; i++) {
+
+    // $('.thisHourInput').attr('data-time', hourBlocksIdArray[i])
+
+    // var referenceHour = $('.thisHourInput').attr('data-time')
+    // console.log(referenceHour)
+
+    // $(referenceHour).attr('data-time', hourBlocksIdArray[i])
+      // console.log($('.thisHourInput').attr('data-time'))
+      // if (currentHour > $('.thisHourInput').attr('data-time')) {
+      //   $('.thisHourInput').css('background-color', 'red')
+      // } else if (currentHour === $('.thisHourInput').attr('data-time')) {
+      //   $('.thisHourInput').css('background-color', 'white')
+      // } else {
+      //   $('.thisHourInput').css('background-color', 'blue')
+      // }
+      // currentHourId = hourBlocksIdArray[i].toString()
+      // console.log(currentHourId)
+    // }
+    // console.log(hourBlocksIdArray[0])
+    // console.log(hourBlocksIdArray.length)
+    // If ()
+    // $('.time-block').attr('background-color','red')
+    //   * Each timeblock is color coded to indicate whether it is in a past, present, or future hour.
+    // var m1 = moment().subtract(5, 'h');
+    // var m2 = moment().subtract(55, 'h');
+    // var m3 = moment().subtract(1, 'd');
+
+    // // Default results
+    // console.log(m1.fromNow());
+    // console.log(m2.fromNow());
+    // console.log(m3.fromNow());
+
+    // // Change relativeTimeThreshold
+    // moment.relativeTimeThreshold('m', 60);
+    // moment.relativeTimeThreshold('h', 24 * 26);
+
+    // // Results in hours
+    // console.log(m1.fromNow());
+    // console.log(m2.fromNow());
+    // console.log(m3.fromNow());
+  </script>
 </body>
 
 </html>
