--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         9AM
       </div>
       <div class="col-md-8 description">
-        <textarea data-time="09" id="9AM" name="9AM" class="thisHourInput"></textarea>
+        <textarea data-time="09" id="input1" name="9AM" class="thisHourInput"></textarea>
       </div>
       <div class="col-md-1 saveBtn">
         <button class="btn btn-primary" type="submit">Save</button>
@@ -38,7 +38,7 @@
         10AM
       </div>
       <div class="col-md-8">
-        <textarea data-time="10" id="10AM" name="10AM" class="thisHourInput"></textarea>
+        <textarea data-time="10" id="input2" name="10AM" class="thisHourInput"></textarea>
       </div>
       <div class="col-md-1 saveBtn">
         <button class="btn btn-primary" type="submit">Save</button>
@@ -49,7 +49,7 @@
         11AM
       </div>
       <div class="col-md-8">
-        <textarea data-time="11" id="11AM" name="11AM" class="thisHourInput"></textarea>
+        <textarea data-time="11" id="input3" name="11AM" class="thisHourInput"></textarea>
       </div>
       <div class="col-md-1 saveBtn">
         <button class="btn btn-primary" type="submit">Save</button>
@@ -60,7 +60,7 @@
         12PM
       </div>
       <div class="col-md-8">
-        <textarea data-time="12" id="12PM" name="12PM" class="thisHourInput"></textarea>
+        <textarea data-time="12" id="input4" name="12PM" class="thisHourInput"></textarea>
       </div>
       <div class="col-md-1 saveBtn">
         <button class="btn btn-primary" type="submit">Save</button>
@@ -71,7 +71,7 @@
         1PM
       </div>
       <div class="col-md-8">
-        <textarea data-time="13" id="1PM" name="1PM" class="thisHourInput"></textarea>
+        <textarea data-time="13" id="input5" name="1PM" class="thisHourInput"></textarea>
       </div>
       <div class="col-md-1 saveBtn">
         <button class="btn btn-primary" type="submit">Save</button>
@@ -82,7 +82,7 @@
         2PM
       </div>
       <div class="col-md-8">
-        <textarea data-time="14" id="2PM" name="2PM" class="thisHourInput"></textarea>
+        <textarea data-time="14" id="input6" name="2PM" class="thisHourInput"></textarea>
       </div>
       <div class="col-md-1 saveBtn">
         <button class="btn btn-primary" type="submit">Save</button>
@@ -93,7 +93,7 @@
         3PM
       </div>
       <div class="col-md-8">
-        <textarea data-time="15" id="3PM" name="3PM" class="thisHourInput"></textarea>
+        <textarea data-time="15" id="input7" name="3PM" class="thisHourInput"></textarea>
       </div>
       <div class="col-md-1 saveBtn">
         <button class="btn btn-primary" type="submit">Save</button>
@@ -104,7 +104,7 @@
         4PM
       </div>
       <div class="col-md-8">
-        <textarea data-time="16" id="4PM" name="4PM" class="thisHourInput"></textarea>
+        <textarea data-time="16" id="input8" name="4PM" class="thisHourInput"></textarea>
       </div>
       <div class="col-md-1 saveBtn">
         <button class="btn btn-primary" type="submit">Save</button>
@@ -115,7 +115,7 @@
         5PM
       </div>
       <div class="col-md-8">
-        <textarea data-time="17" id="5PM" name="5PM" class="thisHourInput"></textarea>
+        <textarea data-time="17" id="input9" name="5PM" class="thisHourInput"></textarea>
       </div>
       <div class="col-md-1 saveBtn">
         <button class="btn btn-primary" type="submit">Save</button>
@@ -133,8 +133,21 @@
     var currentHourNumber;
     var currentHour = moment().hour()
     console.log(currentHour)
-
     // Clicking on the save button will store the time and user input in `localStorage`.Clicking a timeblock's "Save" button stores the input text in local storage, allowing the text to persist when the application is refreshed.
+    $(document).ready(function () {
+      var saveBtn = $('.saveBtn');
+      for (var i = 1; i < 10; i++) {
+        $("#input" + i).val(localStorage.getItem("input" + i));
+      }
+      function saveInput() {
+        // Save data to localstorage
+        for (var i = 1; i < 10; i++) {
+          localStorage.setItem("input" + i, $("#input" + i).val());
+        }
+      };
+      $('.saveBtn').on("click", saveInput);
+    });
+
 
     //This grabs a class from each textarea and then compares the data-time attribute with the current hour. The if statements determine which color the background-color should be
     $.each($('.thisHourInput'), function (index, value) {
@@ -151,7 +164,13 @@
       }
     });
 
+    $('.saveBtn').on('click', function () {
+      // store the entered name in web storage
+      console.log(this)
+      localStorage.setItem('scheduleInput', $(this).val());
 
+    })
+  // run nameDisplayCheck() to sort out display
 
 
 // Most the the following is different things I was trying to get the color formatting to work and exploring moment.js in general
